Changed the font so it looks more elegant. Main font is now Bastia. Fixed the issue with the header and footer being slightly cut off. Changed CSS.added and handeImageClick, but it is hard coded for now.

--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -4,7 +4,62 @@
     color: #333;
 }
 
+body {
+    margin: 0;
+    font-size: 1em;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
+button, html, input, select, textarea {
+    font-family: Bastia,Arial,sans-serif;
+    color: #333;
+}
+
+html {
+    font-size: 86%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+}
+
+::selection {
+    background: #333;
+    color: #fff;
+    text-shadow: none;
+}
+
+.thumbnail-image {
+    width: 180px; 
+    height: auto; /* Maintain aspect ratio */
+    margin: 5px; /* Adds spacing between images */
+    cursor: pointer;
+}
+
+.trending-images {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+}
+  
+.trending-image {
+    max-width: 100%;
+    height: auto;
+    cursor: pointer;
+}
+  
+h2 {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+}
+
+
+/* Borrowed from other sites */
+  
 .qhMT8.qhMT8, .qhMT8.qhMT8 p {
     font-size: 21px;
 }
@@ -76,23 +131,4 @@ h4 {
     padding-left: var(--column-gap);
     padding-right: var(--column-gap);
 }
-body {
-    margin: 0;
-    font-size: 1em;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
 
-button, html, input, select, textarea {
-    font-family: Bastia,Arial,sans-serif;
-    color: #333;
-}
-html {
-    font-size: 62.5%;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-}
-::selection {
-    background: #333;
-    color: #fff;
-    text-shadow: none;
-}
